[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/GeneralTheme.tres" type="Theme" id=1]
[ext_resource path="res://ui/CursosFrame.gd" type="Script" id=2]

[node name="CursosFrame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botones" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
rect_clip_content = true

[node name="Panel" type="Panel" parent="Botones"]
modulate = Color( 1, 1, 1, 0.494118 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Botones"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.29236
margin_top = -10.3388
margin_right = -1.29236
margin_bottom = 5.66119
custom_constants/separation = 0
alignment = 1

[node name="Colegio1" type="VBoxContainer" parent="Botones/HBoxContainer"]
margin_left = 45.0
margin_right = 463.0
margin_bottom = 576.0
custom_constants/separation = 0

[node name="NombreColegio" type="Label" parent="Botones/HBoxContainer/Colegio1"]
modulate = Color( 0.364706, 0.709804, 0.12549, 1 )
margin_right = 418.0
margin_bottom = 96.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Com 18 DE 5"
align = 1

[node name="TurnoMañana" type="HBoxContainer" parent="Botones/HBoxContainer/Colegio1"]
margin_top = 96.0
margin_right = 418.0
margin_bottom = 288.0
custom_constants/separation = 25

[node name="TM1" type="Label" parent="Botones/HBoxContainer/Colegio1/TurnoMañana"]
modulate = Color( 0.364706, 0.709804, 0.12549, 1 )
margin_right = 105.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 0 )
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "TM"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Botones/HBoxContainer/Colegio1/TurnoMañana"]
margin_left = 130.0
margin_right = 381.0
margin_bottom = 192.0

[node name="Btn3ro1raTM" type="Button" parent="Botones/HBoxContainer/Colegio1/TurnoMañana/VBoxContainer"]
margin_right = 251.0
margin_bottom = 96.0
custom_constants/hseparation = 0
text = "3ro 1ra"
align = 0

[node name="Btn3ro2daTM" type="Button" parent="Botones/HBoxContainer/Colegio1/TurnoMañana/VBoxContainer"]
margin_top = 96.0
margin_right = 251.0
margin_bottom = 192.0
custom_constants/hseparation = 0
text = "3ro 2da"
align = 0

[node name="TurnoTarde" type="HBoxContainer" parent="Botones/HBoxContainer/Colegio1"]
margin_top = 288.0
margin_right = 418.0
margin_bottom = 480.0
custom_constants/separation = 23

[node name="TT1" type="Label" parent="Botones/HBoxContainer/Colegio1/TurnoTarde"]
modulate = Color( 0.364706, 0.709804, 0.12549, 1 )
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 0 )
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "TT"
align = 1
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Botones/HBoxContainer/Colegio1/TurnoTarde"]
margin_left = 119.0
margin_right = 370.0
margin_bottom = 192.0

[node name="Btn3ro1raTT" type="Button" parent="Botones/HBoxContainer/Colegio1/TurnoTarde/VBoxContainer2"]
margin_right = 251.0
margin_bottom = 96.0
custom_constants/hseparation = 0
text = "3ro 1ra"
align = 0

[node name="Btn3ro2daTT" type="Button" parent="Botones/HBoxContainer/Colegio1/TurnoTarde/VBoxContainer2"]
margin_top = 96.0
margin_right = 251.0
margin_bottom = 192.0
custom_constants/hseparation = 0
text = "3ro 2da"
align = 0

[node name="Colegio2" type="VBoxContainer" parent="Botones/HBoxContainer"]
margin_left = 463.0
margin_right = 938.0
margin_bottom = 576.0
custom_constants/separation = 0

[node name="NombreColegio" type="Label" parent="Botones/HBoxContainer/Colegio2"]
modulate = Color( 0.364706, 0.709804, 0.12549, 1 )
margin_right = 475.0
margin_bottom = 96.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Liceo 12 DE 18"
align = 1

[node name="TurnoMañana" type="HBoxContainer" parent="Botones/HBoxContainer/Colegio2"]
margin_top = 96.0
margin_right = 475.0
margin_bottom = 384.0
custom_constants/separation = 30

[node name="TM2" type="Label" parent="Botones/HBoxContainer/Colegio2/TurnoMañana"]
modulate = Color( 0.364706, 0.709804, 0.12549, 1 )
margin_right = 105.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 0 )
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "TM"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Botones/HBoxContainer/Colegio2/TurnoMañana"]
margin_left = 135.0
margin_right = 382.0
margin_bottom = 288.0
custom_constants/separation = 0

[node name="Btn4to2daTM" type="Button" parent="Botones/HBoxContainer/Colegio2/TurnoMañana/VBoxContainer"]
margin_right = 247.0
margin_bottom = 96.0
custom_constants/hseparation = 0
text = "4to 2da"
align = 0

[node name="Btn4to3raTM" type="Button" parent="Botones/HBoxContainer/Colegio2/TurnoMañana/VBoxContainer"]
margin_top = 96.0
margin_right = 247.0
margin_bottom = 192.0
custom_constants/hseparation = 0
text = "4to 3ra"
align = 0

[node name="Btn4to4taTM" type="Button" parent="Botones/HBoxContainer/Colegio2/TurnoMañana/VBoxContainer"]
margin_top = 192.0
margin_right = 247.0
margin_bottom = 288.0
custom_constants/hseparation = 0
text = "4to 4ta"
align = 0

[node name="TurnoTarde" type="HBoxContainer" parent="Botones/HBoxContainer/Colegio2"]
margin_top = 384.0
margin_right = 475.0
margin_bottom = 576.0
custom_constants/separation = 30

[node name="TT2" type="Label" parent="Botones/HBoxContainer/Colegio2/TurnoTarde"]
modulate = Color( 0.364706, 0.709804, 0.12549, 1 )
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 0 )
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "TT"
align = 1
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Botones/HBoxContainer/Colegio2/TurnoTarde"]
margin_left = 126.0
margin_right = 373.0
margin_bottom = 192.0
custom_constants/separation = 0

[node name="Btn4to1raTT" type="Button" parent="Botones/HBoxContainer/Colegio2/TurnoTarde/VBoxContainer2"]
margin_right = 247.0
margin_bottom = 96.0
custom_constants/hseparation = 0
text = "4to 1ra"
align = 0

[node name="Btn4to2daTT" type="Button" parent="Botones/HBoxContainer/Colegio2/TurnoTarde/VBoxContainer2"]
margin_top = 96.0
margin_right = 247.0
margin_bottom = 192.0
custom_constants/hseparation = 0
text = "4to 2da"
align = 0

[node name="exitBtn" type="Button" parent="."]
modulate = Color( 0.580392, 0.0941176, 0.0941176, 1 )
margin_left = 40.8491
margin_top = 480.811
margin_right = 216.849
margin_bottom = 568.811
text = "SALIR"
[connection signal="pressed" from="Botones/HBoxContainer/Colegio1/TurnoMañana/VBoxContainer/Btn3ro1raTM" to="." method="_on_Btn3ro1raTM_pressed"]
[connection signal="pressed" from="Botones/HBoxContainer/Colegio1/TurnoMañana/VBoxContainer/Btn3ro2daTM" to="." method="_on_Btn3ro2daTM_pressed"]
[connection signal="pressed" from="Botones/HBoxContainer/Colegio1/TurnoTarde/VBoxContainer2/Btn3ro1raTT" to="." method="_on_Btn3ro1raTT_pressed"]
[connection signal="pressed" from="Botones/HBoxContainer/Colegio1/TurnoTarde/VBoxContainer2/Btn3ro2daTT" to="." method="_on_Btn3ro2daTT_pressed"]
[connection signal="pressed" from="Botones/HBoxContainer/Colegio2/TurnoMañana/VBoxContainer/Btn4to2daTM" to="." method="_on_Btn4to2daTM_pressed"]
[connection signal="pressed" from="Botones/HBoxContainer/Colegio2/TurnoMañana/VBoxContainer/Btn4to3raTM" to="." method="_on_Btn4to3raTM_pressed"]
[connection signal="pressed" from="Botones/HBoxContainer/Colegio2/TurnoMañana/VBoxContainer/Btn4to4taTM" to="." method="_on_Btn4to4taTM_pressed"]
[connection signal="pressed" from="Botones/HBoxContainer/Colegio2/TurnoTarde/VBoxContainer2/Btn4to1raTT" to="." method="_on_Btn4to1raTT_pressed"]
[connection signal="pressed" from="Botones/HBoxContainer/Colegio2/TurnoTarde/VBoxContainer2/Btn4to2daTT" to="." method="_on_Btn4to2daTT_pressed"]
[connection signal="pressed" from="exitBtn" to="." method="_on_exitBtn_pressed"]
